--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,10 @@
   font-weight: bold;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .App {
   min-height: 100vh;
   font-family: HelveticaNeue;
@@ -27,6 +31,9 @@
 }
 
 header {
+  position: relative;
+  z-index: 10;
+  background: white;
   display: flex;
   justify-content: space-between;
   padding-left: 120px;
@@ -62,19 +69,6 @@ header {
 
   img {
     width: 682px;
-  }
-}
-
-.content.modal-open {
-  justify-content: space-between;
-
-  .beers-bg-container {
-    display: none;
-  }
-
-  .beers {
-    width: 60vw;
-    height: 100vh;
   }
 }
 
@@ -178,6 +172,7 @@ header {
     z-index: 10;
 
     .beer-title {
+      font-family: Druk;
       font-size: 80px;
       line-height: 85%;
       font-weight: 900;
@@ -230,7 +225,25 @@ header {
   }
 }
 
+.content.modal-open {
+  justify-content: space-between;
+
+  .beers-bg-container {
+    display: none;
+  }
+
+  .beers {
+    width: 60vw;
+    height: 100vh;
+
+    .beer {
+      margin: 0;
+    }
+  }
+}
+
 footer {
+  z-index: 10;
   display: flex;
   justify-content: space-between;
   padding-left: 120px;
