--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,12 @@ body {
   overflow-x: hidden;
 }
 
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
 .App {
   min-height: 100vh;
   font-family: HelveticaNeue;
@@ -49,6 +55,10 @@ header {
 
   .beer-emoji {
     font-size: 50px;
+  }
+
+  .close-btn {
+    width: 22px;
   }
 }
 
@@ -106,6 +116,12 @@ header {
 
     &.left {
       text-align: right;
+
+      .beer-info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
     }
 
     &.right {
@@ -153,6 +169,12 @@ header {
         background-color: rgba(255, 207, 0, 1);
         border-radius: 240px;
         text-transform: uppercase;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 19px 20px;
+        gap: 20px;
       }
     }
 
@@ -288,4 +310,8 @@ footer {
   border-top: 1px solid rgba(204, 204, 204, 1);
   background-color: white;
   position: relative;
+
+  .cheers {
+    font-weight: 900;
+  }
 }
